# phenoEvents

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  SECURITY.md  SSOT.md  audit_scorecard.json  cliff.toml  deny.toml  justfile  llms.txt  osv-scanner.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  deny.yml  observability-smoke.yml  release-attestation.yml  scorecard.yml
benches/: bus.rs  schema.rs
crates/phenoevents-observability/: Cargo.toml
crates/phenoevents-observability/src/: lib.rs
docs/: observability.md
docs/boundary/: phenoEvents.md
docs/intent/: phenoEvents.md
docs/migration/: eventra-65-parity.md
docs/ops/: RUNBOOK.md
docs/security/: THREAT_MODEL.md
phenoEvents/: justfile
ports/: Cargo.toml
ports/src/: event_bus.rs  lib.rs
ports/src/adapters/: mod.rs  nats.rs  redis_streams.rs
ports/tests/: event_bus.rs
src/: lib.rs  observability.rs
src/bus/: in_memory.rs  mod.rs
src/core/: envelope.rs  mod.rs
src/projection/: mod.rs
src/schema/: mod.rs  registry.rs
tests/: property_tests.rs
