[package]
name = "pheno-events"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/phenoevents-observability"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/phenoEvents"

[dependencies]
async-trait = "0.1"
async-channel = "2.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
phenoevents-observability = { path = "crates/phenoevents-observability" }
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }

[[bench]]
name = "bus"
harness = false

[[bench]]
name = "schema"
harness = false
