[package]
name = "phenoevents-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OTel/OTLP observability for phenoEvents"

[dependencies]
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
thiserror = "2"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lib]
path = "src/lib.rs"
